INCOMPLETE: Revert to vendor copy - Miller columns scrolling improvements; avoid error and double overflows

--- a/browser_action/unicode-dialog.css
+++ b/browser_action/unicode-dialog.css
@@ -216,6 +216,10 @@ radiogroup {
     margin-top: 10px;
     min-height: 20px;
 }
+.miller-columns {
+    overflow: hidden !important;
+}
+
 #chart_layout_persist {
     overflow: auto;
     min-height: 20px;
